language/examples/compiler/y.output
Grammar

    0 $accept: Program $end

    1 Program: Stmt
    2        | Program Stmt

    3 Stmt: ProcCustom
    4     | RegionCustom
    5     | LayoutCustom
    6     | InstanceLimit
    7     | MemoryCollect
    8     | FuncDef
    9     | IndexTaskMap
   10     | SingleTaskMap
   11     | Assign_Stmt
   12     | Print_Stmt

   13 Identifier_star: T_Identifier
   14                | '*'

   15 Identifier_List: T_Identifier ',' T_Identifier
   16                | Identifier_List ',' T_Identifier

   17 InstanceLimit: T_Instance T_Identifier Proc T_IntConstant ';'

   18 MemoryCollect: T_Collect Identifier_star Identifier_star ';'

   19 ProcCustom: T_Task Identifier_star ProcLst ';'

   20 RegionCustom: T_Region Identifier_star Identifier_star Proc MemLst ';'
   21             | T_Region Identifier_star Identifier_star Identifier_star MemLst ';'

   22 LayoutCustom: T_Layout Identifier_star Identifier_star Mem Constraints ';'
   23             | T_Layout Identifier_star Identifier_star Identifier_star Constraints ';'

   24 Constraints: %empty
   25            | Constraints T_Reverse_Dimension
   26            | Constraints T_Positive_Dimension
   27            | Constraints T_AOS
   28            | Constraints T_SOA
   29            | Constraints T_Compact
   30            | Constraints T_Exact
   31            | Constraints T_Align '<' T_IntConstant
   32            | Constraints T_Align T_Le T_IntConstant
   33            | Constraints T_Align '>' T_IntConstant
   34            | Constraints T_Align T_Ge T_IntConstant
   35            | Constraints T_Align T_Eq T_IntConstant
   36            | Constraints T_Align T_Ne T_IntConstant

   37 FuncDef: T_Def T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

   38 IndexTaskMap: T_IndexTaskMap Identifier_star T_Identifier ';'
   39             | T_IndexTaskMap Identifier_List T_Identifier ';'

   40 SingleTaskMap: T_SingleTaskMap Identifier_star T_Identifier ';'
   41              | T_SingleTaskMap Identifier_List T_Identifier ';'

   42 Assign_Stmt: T_Identifier '=' Expr ';'

   43 Func_Stmts: Func_Stmt
   44           | Func_Stmts Func_Stmt

   45 Func_Stmt: Assign_Stmt
   46          | Return_Stmt
   47          | Print_Stmt

   48 Return_Stmt: T_Return Expr ';'

   49 Print_Stmt: T_Print '(' T_StringConstant Print_Args ')' ';'

   50 Print_Args: %empty
   51           | Print_Args ',' Expr

   52 ArgLst: %empty
   53       | ArgLst_

   54 ArgLst_: TYPE T_Identifier
   55        | ArgLst_ ',' TYPE T_Identifier

   56 Expr: Expr '+' Expr
   57     | Expr '-' Expr
   58     | Expr '*' Expr
   59     | Expr '/' Expr
   60     | Expr '%' Expr
   61     | Expr '>' Expr
   62     | Expr '<' Expr
   63     | '(' Expr ')'
   64     | Expr T_Ge Expr
   65     | Expr T_Le Expr
   66     | Expr T_Eq Expr
   67     | Expr T_Ne Expr
   68     | Expr T_Or Expr
   69     | Expr T_And Expr
   70     | Expr '(' ExprN_1 ')'
   71     | Expr '[' SliceExpr ']'
   72     | Expr '[' ExprN_1 ']'
   73     | '*'
   74     | '-' Expr
   75     | T_IntConstant
   76     | T_True
   77     | T_False
   78     | T_Identifier
   79     | '(' ExprN ')'
   80     | Proc
   81     | Mem
   82     | Expr '.' Prop
   83     | Expr '?' Expr ':' Expr
   84     | '*' Expr
   85     | T_Tuple '(' Expr T_For T_Identifier T_In Expr ')'

   86 SliceExpr: Expr ':' Expr
   87          | ':' Expr
   88          | Expr ':'
   89          | ':'

   90 ExprN_1: Expr
   91        | ExprN_1 ',' Expr

   92 ExprN: Expr ',' Expr
   93      | ExprN ',' Expr

   94 Prop: T_Size
   95     | T_Split
   96     | T_Merge
   97     | T_Swap
   98     | T_Slice
   99     | T_Reverse
  100     | T_Balance_split
  101     | T_Auto_split
  102     | T_Greedy_split
  103     | T_Volume
  104     | T_Has
  105     | T_Len
  106     | T_TaskIPoint
  107     | T_TaskISpace
  108     | T_TaskParent
  109     | T_TaskProcessor

  110 TYPE: T_Int
  111     | T_Bool
  112     | T_IPoint
  113     | T_ISpace
  114     | T_MSpace
  115     | T_Task

  116 ProcLst: Proc
  117        | ProcLst ',' Proc

  118 MemLst: Mem
  119       | MemLst ',' Mem

  120 Mem: T_SYSMEM
  121    | T_FBMEM
  122    | T_RDMEM
  123    | T_ZCMEM
  124    | T_SOCKMEM

  125 Proc: T_CPU
  126     | T_GPU
  127     | T_IO
  128     | T_PY
  129     | T_PROC
  130     | T_OMP


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '%' (37) 60
    '(' (40) 37 49 63 70 79 85
    ')' (41) 37 49 63 70 79 85
    '*' (42) 14 58 73 84
    '+' (43) 56
    ',' (44) 15 16 51 55 91 92 93 117 119
    '-' (45) 57 74
    '.' (46) 82
    '/' (47) 59
    ':' (58) 83 86 87 88 89
    ';' (59) 17 18 19 20 21 22 23 38 39 40 41 42 48 49
    '<' (60) 31 62
    '=' (61) 42
    '>' (62) 33 61
    '?' (63) 83
    '[' (91) 71 72
    ']' (93) 71 72
    '{' (123) 37
    '}' (125) 37
    error (256)
    T_Size (258) 94
    T_Split (259) 95
    T_Merge (260) 96
    T_Swap (261) 97
    T_Slice (262) 98
    T_Reverse (263) 99
    T_Balance_split (264) 100
    T_Auto_split (265) 101
    T_Greedy_split (266) 102
    T_Volume (267) 103
    T_Has (268) 104
    T_Tuple (269) 85
    T_For (270) 85
    T_In (271) 85
    T_Len (272) 105
    T_TaskIPoint (273) 106
    T_TaskISpace (274) 107
    T_TaskParent (275) 108
    T_TaskProcessor (276) 109
    T_SingleTaskMap (277) 40 41
    T_Reverse_Dimension (278) 25
    T_Positive_Dimension (279) 26
    T_AOS (280) 27
    T_SOA (281) 28
    T_Compact (282) 29
    T_Align (283) 31 32 33 34 35 36
    T_Exact (284) 30
    T_CPU (285) 125
    T_GPU (286) 126
    T_IO (287) 127
    T_PY (288) 128
    T_PROC (289) 129
    T_OMP (290) 130
    T_SYSMEM (291) 120
    T_FBMEM (292) 121
    T_RDMEM (293) 122
    T_ZCMEM (294) 123
    T_SOCKMEM (295) 124
    T_Int (296) 110
    T_Bool (297) 111
    T_IPoint (298) 112
    T_ISpace (299) 113
    T_MSpace (300) 114
    T_Def (301) 37
    T_Return (302) 48
    T_True (303) 76
    T_False (304) 77
    T_Task (305) 19 115
    T_Region (306) 20 21
    T_Layout (307) 22 23
    T_IndexTaskMap (308) 38 39
    T_Print (309) 49
    T_Instance (310) 17
    T_Collect (311) 18
    T_Le (312) 32 65
    T_Ge (313) 34 64
    T_Eq (314) 35 66
    T_Ne (315) 36 67
    T_And (316) 69
    T_Or (317) 68
    T_Identifier <string> (318) 13 15 16 17 37 38 39 40 41 42 54 55 78 85
    T_StringConstant <string> (319) 49
    T_IntConstant <intVal> (320) 17 31 32 33 34 35 36 75


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    Program <program> (87)
        on left: 1 2
        on right: 0 2
    Stmt <stmt> (88)
        on left: 3 4 5 6 7 8 9 10 11 12
        on right: 1 2
    Identifier_star <string> (89)
        on left: 13 14
        on right: 18 19 20 21 22 23 38 40
    Identifier_List <stringlist> (90)
        on left: 15 16
        on right: 16 39 41
    InstanceLimit <instancelimit> (91)
        on left: 17
        on right: 6
    MemoryCollect <memorycollect> (92)
        on left: 18
        on right: 7
    ProcCustom <proccustom> (93)
        on left: 19
        on right: 3
    RegionCustom <regioncustom> (94)
        on left: 20 21
        on right: 4
    LayoutCustom <layoutcustom> (95)
        on left: 22 23
        on right: 5
    Constraints <constraints> (96)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 22 23 25 26 27 28 29 30 31 32 33 34 35 36
    FuncDef <funcdef> (97)
        on left: 37
        on right: 8
    IndexTaskMap <indextaskmap> (98)
        on left: 38 39
        on right: 9
    SingleTaskMap <singletaskmap> (99)
        on left: 40 41
        on right: 10
    Assign_Stmt <assign> (100)
        on left: 42
        on right: 11 45
    Func_Stmts <funcstmt> (101)
        on left: 43 44
        on right: 37 44
    Func_Stmt <stmt> (102)
        on left: 45 46 47
        on right: 43 44
    Return_Stmt <returnstmt> (103)
        on left: 48
        on right: 46
    Print_Stmt <printstmt> (104)
        on left: 49
        on right: 12 47
    Print_Args <printargs> (105)
        on left: 50 51
        on right: 49 51
    ArgLst <args> (106)
        on left: 52 53
        on right: 37
    ArgLst_ <args> (107)
        on left: 54 55
        on right: 53 55
    Expr <expr> (108)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 42 48 51 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 74 82 83 84 85 86 87 88 90 91 92 93
    SliceExpr <sliceexpr> (109)
        on left: 86 87 88 89
        on right: 71
    ExprN_1 <exprn> (110)
        on left: 90 91
        on right: 70 72 91
    ExprN <exprn> (111)
        on left: 92 93
        on right: 79 93
    Prop <prop> (112)
        on left: 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 82
    TYPE <argtype> (113)
        on left: 110 111 112 113 114 115
        on right: 54 55
    ProcLst <proclst> (114)
        on left: 116 117
        on right: 19 117
    MemLst <memlst> (115)
        on left: 118 119
        on right: 20 21 119
    Mem <mem> (116)
        on left: 120 121 122 123 124
        on right: 22 81 118 119
    Proc <proc> (117)
        on left: 125 126 127 128 129 130
        on right: 17 20 80 116 117


State 0

    0 $accept: . Program $end

    T_SingleTaskMap  shift, and go to state 1
    T_Def            shift, and go to state 2
    T_Task           shift, and go to state 3
    T_Region         shift, and go to state 4
    T_Layout         shift, and go to state 5
    T_IndexTaskMap   shift, and go to state 6
    T_Print          shift, and go to state 7
    T_Instance       shift, and go to state 8
    T_Collect        shift, and go to state 9
    T_Identifier     shift, and go to state 10

    Program        go to state 11
    Stmt           go to state 12
    InstanceLimit  go to state 13
    MemoryCollect  go to state 14
    ProcCustom     go to state 15
    RegionCustom   go to state 16
    LayoutCustom   go to state 17
    FuncDef        go to state 18
    IndexTaskMap   go to state 19
    SingleTaskMap  go to state 20
    Assign_Stmt    go to state 21
    Print_Stmt     go to state 22


State 1

   40 SingleTaskMap: T_SingleTaskMap . Identifier_star T_Identifier ';'
   41              | T_SingleTaskMap . Identifier_List T_Identifier ';'

    T_Identifier  shift, and go to state 23
    '*'           shift, and go to state 24

    Identifier_star  go to state 25
    Identifier_List  go to state 26


State 2

   37 FuncDef: T_Def . T_Identifier '(' ArgLst ')' '{' Func_Stmts '}'

    T_Identifier  shift, and go to state 27


State 3

   19 ProcCustom: T_Task . Identifier_star ProcLst ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 29


State 4

   20 RegionCustom: T_Region . Identifier_star Identifier_star Proc MemLst ';'
   21             | T_Region . Identifier_star Identifier_star Identifier_star MemLst ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 30


State 5

   22 LayoutCustom: T_Layout . Identifier_star Identifier_star Mem Constraints ';'
   23             | T_Layout . Identifier_star Identifier_star Identifier_star Constraints ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 31


State 6

   38 IndexTaskMap: T_IndexTaskMap . Identifier_star T_Identifier ';'
   39             | T_IndexTaskMap . Identifier_List T_Identifier ';'

    T_Identifier  shift, and go to state 23
    '*'           shift, and go to state 24

    Identifier_star  go to state 32
    Identifier_List  go to state 33


State 7

   49 Print_Stmt: T_Print . '(' T_StringConstant Print_Args ')' ';'

    '('  shift, and go to state 34


State 8

   17 InstanceLimit: T_Instance . T_Identifier Proc T_IntConstant ';'

    T_Identifier  shift, and go to state 35


State 9

   18 MemoryCollect: T_Collect . Identifier_star Identifier_star ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 36


State 10

   42 Assign_Stmt: T_Identifier . '=' Expr ';'

    '='  shift, and go to state 37


State 11

    0 $accept: Program . $end
    2 Program: Program . Stmt

    $end             shift, and go to state 38
    T_SingleTaskMap  shift, and go to state 1
    T_Def            shift, and go to state 2
    T_Task           shift, and go to state 3
    T_Region         shift, and go to state 4
    T_Layout         shift, and go to state 5
    T_IndexTaskMap   shift, and go to state 6
    T_Print          shift, and go to state 7
    T_Instance       shift, and go to state 8
    T_Collect        shift, and go to state 9
    T_Identifier     shift, and go to state 10

    Stmt           go to state 39
    InstanceLimit  go to state 13
    MemoryCollect  go to state 14
    ProcCustom     go to state 15
    RegionCustom   go to state 16
    LayoutCustom   go to state 17
    FuncDef        go to state 18
    IndexTaskMap   go to state 19
    SingleTaskMap  go to state 20
    Assign_Stmt    go to state 21
    Print_Stmt     go to state 22


State 12

    1 Program: Stmt .

    $default  reduce using rule 1 (Program)


State 13

    6 Stmt: InstanceLimit .

    $default  reduce using rule 6 (Stmt)


State 14

    7 Stmt: MemoryCollect .

    $default  reduce using rule 7 (Stmt)


State 15

    3 Stmt: ProcCustom .

    $default  reduce using rule 3 (Stmt)


State 16

    4 Stmt: RegionCustom .

    $default  reduce using rule 4 (Stmt)


State 17

    5 Stmt: LayoutCustom .

    $default  reduce using rule 5 (Stmt)


State 18

    8 Stmt: FuncDef .

    $default  reduce using rule 8 (Stmt)


State 19

    9 Stmt: IndexTaskMap .

    $default  reduce using rule 9 (Stmt)


State 20

   10 Stmt: SingleTaskMap .

    $default  reduce using rule 10 (Stmt)


State 21

   11 Stmt: Assign_Stmt .

    $default  reduce using rule 11 (Stmt)


State 22

   12 Stmt: Print_Stmt .

    $default  reduce using rule 12 (Stmt)


State 23

   13 Identifier_star: T_Identifier .
   15 Identifier_List: T_Identifier . ',' T_Identifier

    ','  shift, and go to state 40

    $default  reduce using rule 13 (Identifier_star)


State 24

   14 Identifier_star: '*' .

    $default  reduce using rule 14 (Identifier_star)


State 25

   40 SingleTaskMap: T_SingleTaskMap Identifier_star . T_Identifier ';'

    T_Identifier  shift, and go to state 41


State 26

   16 Identifier_List: Identifier_List . ',' T_Identifier
   41 SingleTaskMap: T_SingleTaskMap Identifier_List . T_Identifier ';'

    T_Identifier  shift, and go to state 42
    ','           shift, and go to state 43


State 27

   37 FuncDef: T_Def T_Identifier . '(' ArgLst ')' '{' Func_Stmts '}'

    '('  shift, and go to state 44


State 28

   13 Identifier_star: T_Identifier .

    $default  reduce using rule 13 (Identifier_star)


State 29

   19 ProcCustom: T_Task Identifier_star . ProcLst ';'

    T_CPU   shift, and go to state 45
    T_GPU   shift, and go to state 46
    T_IO    shift, and go to state 47
    T_PY    shift, and go to state 48
    T_PROC  shift, and go to state 49
    T_OMP   shift, and go to state 50

    ProcLst  go to state 51
    Proc     go to state 52


State 30

   20 RegionCustom: T_Region Identifier_star . Identifier_star Proc MemLst ';'
   21             | T_Region Identifier_star . Identifier_star Identifier_star MemLst ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 53


State 31

   22 LayoutCustom: T_Layout Identifier_star . Identifier_star Mem Constraints ';'
   23             | T_Layout Identifier_star . Identifier_star Identifier_star Constraints ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 54


State 32

   38 IndexTaskMap: T_IndexTaskMap Identifier_star . T_Identifier ';'

    T_Identifier  shift, and go to state 55


State 33

   16 Identifier_List: Identifier_List . ',' T_Identifier
   39 IndexTaskMap: T_IndexTaskMap Identifier_List . T_Identifier ';'

    T_Identifier  shift, and go to state 56
    ','           shift, and go to state 43


State 34

   49 Print_Stmt: T_Print '(' . T_StringConstant Print_Args ')' ';'

    T_StringConstant  shift, and go to state 57


State 35

   17 InstanceLimit: T_Instance T_Identifier . Proc T_IntConstant ';'

    T_CPU   shift, and go to state 45
    T_GPU   shift, and go to state 46
    T_IO    shift, and go to state 47
    T_PY    shift, and go to state 48
    T_PROC  shift, and go to state 49
    T_OMP   shift, and go to state 50

    Proc  go to state 58


State 36

   18 MemoryCollect: T_Collect Identifier_star . Identifier_star ';'

    T_Identifier  shift, and go to state 28
    '*'           shift, and go to state 24

    Identifier_star  go to state 59


State 37

   42 Assign_Stmt: T_Identifier '=' . Expr ';'
